Fixed mobile padding on learn page. Added horizontal scrolling for the my republic navigation menu. Adjusted profile page navigation layout.

--- a/ElastosBountyProgram/front-end/src/module/page/developer/learn/style.scss
+++ b/ElastosBountyProgram/front-end/src/module/page/developer/learn/style.scss
@@ -7,6 +7,10 @@
   text-align: left;
   padding: 0 48px;
 
+  @media only screen and (max-width: $mobile-width) {
+    padding: 0 24px;
+  }
+
   .ebp-wrap {
     max-width: 1200px;
   }
